--- a/servidor_minecraft/config/thirst/common.toml
+++ b/servidor_minecraft/config/thirst/common.toml
@@ -1,7 +1,7 @@
 
 [General]
 	#How much faster is hydration depletion relative to hunger (1 means they will deplete at the same speed)
-	thirstDepletionModifier = 1.2
+	thirstDepletionModifier = 1.0
 	#Whether hydration depletion in peaceful mode
 	thirstDepletionInPeace = false
 	#How much is hydration depletion in nether faster than overworld
@@ -27,7 +27,7 @@
 	#Whether hydration depletes when the player's health is regenerating (like hunger)
 	healthRegenDepletesHydration = true
 	#Whether dehydration from regenerating health (if enabled above) should take into account temperature and humidity
-	healthRegenDehydrationIsBiomeDependent = true
+	healthRegenDehydrationIsBiomeDependent = false
 	#Whether players can drink by shift-right-clicking water with an empty hand. Attention: it needs to be enable on both server and client sides
 	canDrinkByHand = true
 	#How much the player is hydrated when drinking by hand
@@ -61,7 +61,7 @@
 	#% of getting poisoned after drinking acceptable water
 	acceptablePoisonPercentage = 0
 	#% of getting sick (hunger and nausea) after drinking acceptable water
-	acceptableNauseaPercentage = 5
+	acceptableNauseaPercentage = 0
 	#% of getting poisoned after drinking purified water
 	purifiedPoisonPercentage = 0
 	#% of getting sick (hunger and nausea) after drinking purified water
