--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Apr 26 01:12:17 UTC 2025
+#Sat Apr 26 19:34:08 UTC 2025
 allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
@@ -29,7 +29,7 @@ max-chained-neighbor-updates=1000000
 max-players=2
 max-tick-time=60000
 max-world-size=29999984
-motd=§r       §5§lSpore Apocalipsis-Prion
+motd=§r       §4Spore Apocalipsis-Prion
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
