--- a/servidor_minecraft/config/coldsweat/world.toml
+++ b/servidor_minecraft/config/coldsweat/world.toml
@@ -17,6 +17,90 @@
 	#Defines the temperature of a biome, overriding the biome's default temperature
 	"Biome Temperatures" = [["minecraft:soul_sand_valley", 53, 53, "F"], ["minecraft:old_growth_birch_forest", 58, 72, "F"], ["minecraft:river", 60, 70, "F"], ["minecraft:swamp", 72, 84, "F"], ["minecraft:savanna", 70, 95, "F"], ["minecraft:savanna_plateau", 76, 98, "F"], ["minecraft:windswept_savanna", 67, 90, "F"], ["minecraft:taiga", 44, 62, "F"], ["minecraft:snowy_taiga", 19, 48, "F"], ["minecraft:old_growth_pine_taiga", 48, 62, "F"], ["minecraft:old_growth_spruce_taiga", 48, 62, "F"], ["minecraft:desert", 48, 115, "F"], ["minecraft:stony_shore", 50, 64, "F"], ["minecraft:snowy_beach", 38, 52, "F"], ["minecraft:snowy_slopes", 24, 38, "F"], ["minecraft:windswept_forest", 48, 66, "F"], ["minecraft:frozen_peaks", 15, 33, "F"], ["minecraft:warm_ocean", 67, 76, "F"], ["minecraft:deep_frozen_ocean", 56, 65, "F"], ["minecraft:jungle", 76, 87, "F"], ["minecraft:bamboo_jungle", 76, 87, "F"], ["minecraft:badlands", 84, 120, "F"], ["minecraft:wooded_badlands", 80, 108, "F"], ["minecraft:eroded_badlands", 88, 120, "F"], ["minecraft:deep_dark", 63, 63, "F"], ["terralith:moonlight_valley", 57, 76, "F"], ["terralith:rocky_mountains", 45, 73, "F"], ["terralith:blooming_plateau", 49, 78, "F"], ["terralith:alpine_grove", 16, 53, "F"], ["terralith:yellowstone", 47, 68, "F"], ["terralith:forested_highlands", 43, 70, "F"], ["terralith:temperate_highlands", 54, 80, "F"], ["terralith:amethyst_rainforest", 69, 84, "F"], ["terralith:sandstone_valley", 78, 114, "F"], ["terralith:ancient_sands", 83, 130, "F"], ["terralith:arid_highlands", 74, 102, "F"], ["terralith:volcanic_crater", 96, 162, "F"], ["terralith:volcanic_peaks", 76, 122, "F"], ["terralith:basalt_cliffs", 76, 122, "F"], ["terralith:birch_taiga", 40, 62, "F"], ["terralith:brushland", 64, 89, "F"], ["terralith:bryce_canyon", 72, 110, "F"], ["terralith:caldera", 58, 71, "F"], ["terralith:cloud_forest", 38, 58, "F"], ["terralith:desert_canyon", 73, 121, "F"], ["terralith:desert_spires", 60, 121, "F"], ["terralith:orchid_swamp", 62, 81, "F"], ["terralith:fractured_savanna", 65, 92, "F"], ["terralith:savanna_badlands", 68, 99, "F"], ["terralith:granite_cliffs", 65, 85, "F"], ["terralith:granite_cliffs", 65, 85, "F"], ["terralith:haze_mountain", 62, 74, "F"], ["terralith:highlands", 62, 74, "F"], ["terralith:lavender_valley", 59, 76, "F"], ["terralith:lavender_forest", 56, 75, "F"], ["terralith:red_oasis", 58, 94, "F"], ["terralith:shield", 48, 68, "F"], ["terralith:shield_clearing", 28, 80, "F"], ["terralith:steppe", 44, 78, "F"], ["terralith:warped_mesa", 66, 84, "F"]]
 
+#"Thermal sources" are blocks that have a smokestack and emit frigidness/warmth, like the hearth, boiler, and iceobx
+["Thermal Sources"]
+	#List of additional blocks that thermal sources can spread through
+	#Use this list if thermal sources aren't spreading through particular blocks that they should
+	"Thermal Source Spread Whitelist" = ["minecraft:iron_bars", "minecraft:jungle_leaves", "minecraft:oak_leaves", "minecraft:spruce_leaves", "minecraft:dark_oak_leaves", "minecraft:acacia_leaves", "minecraft:birch_leaves", "minecraft:azalea_leaves", "minecraft:flowering_azalea_leaves", "minecraft:mangrove_leaves", "minecraft:cherry_leaves", "quark:blue_blossom_leaves", "quark:lavender_blossom_leaves", "quark:orange_blossom_leaves", "quark:yellow_blossom_leaves", "quark:red_blossom_leaves", "quark:ancient_leaves"]
+	#List of additional blocks that thermal sources spread through
+	#Use this list if thermal sources are spreading through particular blocks that they shouldn't
+	"Thermal Source Spread Blacklist" = ["minecraft:water"]
+	#How effective thermal sources are at normalizing temperature
+	#Range: 0.0 ~ 1.0
+	"Thermal Source Strength" = 0.75
+
+	["Thermal Sources".Hearth]
+		#Allows the hearth to automatically turn on/off based on nearby players' temperature
+		#If false, it turns on/off by redstone signal instead
+		"Automatic Hearth" = false
+		#The maximum distance that air can be piped away from the hearth
+		#Range: > 0
+		"Max Hearth Range" = 96
+		#The distance the hearth's air will travel from a source, like the hearth itself or the end of a pipe
+		#Range: > 0
+		"Hearth Range" = 20
+		#The maximum volume of the hearth's area of effect
+		#Range: > 1
+		"Hearth Volume" = 12000
+		#The time it takes for the hearth to be fully functional after being placed
+		#Range: > 0
+		"Hearth Warm-Up Time" = 1200
+		#The maximum amount of insulation that the hearth can provide
+		#Range: 0 ~ 10
+		"Hearth Effect Strength" = 10
+		#How often the hearth consumes fuel (in ticks)
+		#Lower numbers mean fuel is consumed faster. Setting to 0 disables fuel consumption
+		#Range: > 0
+		"Hearth Fuel Consumption Interval" = 40
+
+	["Thermal Sources".Boiler]
+		#Allows the boiler to automatically turn on/off based on nearby players' temperature
+		#If false, it turns on/off by redstone signal instead
+		"Automatic Boiler" = false
+		#The maximum distance that air can be piped away from the boiler
+		#Range: > 0
+		"Max Boiler Range" = 96
+		#The distance the boiler's air will travel from a source, like the boiler itself or the end of a pipe
+		#Range: > 0
+		"Boiler Range" = 16
+		#The maximum volume of the boiler's area of effect
+		#Range: > 1
+		"Boiler Volume" = 2000
+		#The time it takes for the boiler to be fully functional after being placed
+		#Range: > 0
+		"Boiler Warm-Up Time" = 1200
+		#The maximum amount of insulation that the boiler can provide
+		#Range: 0 ~ 10
+		"Boiler Warmth Strength" = 5
+		#How often the boiler consumes fuel (in ticks)
+		#Lower numbers mean fuel is consumed faster. Setting to 0 disables fuel consumption
+		#Range: > 0
+		"Boiler Fuel Consumption Interval" = 40
+
+	["Thermal Sources".Icebox]
+		#Allows the icebox to automatically turn on/off based on nearby players' temperature
+		#If false, it turns on/off by redstone signal instead
+		"Automatic Icebox" = false
+		#The distance the icebox's air will travel from a source, like the icebox itself or the end of a pipe
+		#Range: > 0
+		"Icebox Range" = 16
+		#The maximum distance that air can be piped away from the icebox
+		#Range: > 0
+		"Max Icebox Range" = 96
+		#The maximum volume of the icebox's area of effect
+		#Range: > 1
+		"Icebox Volume" = 2000
+		#The time it takes for the icebox to be fully functional after being placed
+		#Range: > 0
+		"Icebox Warm-Up Time" = 1200
+		#The maximum amount of insulation that the icebox can provide
+		#Range: 0 ~ 10
+		"Icebox Chill Strength" = 5
+		#How often the icebox consumes fuel (in ticks)
+		#Lower numbers mean fuel is consumed faster. Setting to 0 disables fuel consumption
+		#Range: > 0
+		"Icebox Fuel Consumption Interval" = 40
+
 [Blocks]
 	# Format:
 	# [["block-ids", <temperature>, <range>, <*units>, <*max effect>, <*predicates>, <*"nbt">, <*temperature-limit>], [etc...], [etc...]]
@@ -63,90 +147,6 @@
 	#Converts damage dealt by Soul Fire to cold damage (default: true)
 	#Does not affect the block's temperature
 	"Cold Soul Fire" = true
-
-#"Thermal sources" are blocks that have a smokestack and emit frigidness/warmth, like the hearth, boiler, and iceobx
-["Thermal Sources"]
-	#How effective thermal sources are at normalizing temperature
-	#Range: 0.0 ~ 1.0
-	"Thermal Source Strength" = 0.75
-	#List of additional blocks that thermal sources can spread through
-	#Use this list if thermal sources aren't spreading through particular blocks that they should
-	"Thermal Source Spread Whitelist" = ["minecraft:iron_bars", "#minecraft:leaves"]
-	#List of additional blocks that thermal sources spread through
-	#Use this list if thermal sources are spreading through particular blocks that they shouldn't
-	"Thermal Source Spread Blacklist" = ["minecraft:water"]
-
-	["Thermal Sources".Hearth]
-		#Allows the hearth to automatically turn on/off based on nearby players' temperature
-		#If false, it turns on/off by redstone signal instead
-		"Automatic Hearth" = false
-		#The distance the hearth's air will travel from a source, like the hearth itself or the end of a pipe
-		#Range: > 0
-		"Hearth Range" = 20
-		#The maximum distance that air can be piped away from the hearth
-		#Range: > 0
-		"Max Hearth Range" = 96
-		#The maximum volume of the hearth's area of effect
-		#Range: > 1
-		"Hearth Volume" = 12000
-		#The time it takes for the hearth to be fully functional after being placed
-		#Range: > 0
-		"Hearth Warm-Up Time" = 1200
-		#The maximum amount of insulation that the hearth can provide
-		#Range: 0 ~ 10
-		"Hearth Effect Strength" = 10
-		#How often the hearth consumes fuel (in ticks)
-		#Lower numbers mean fuel is consumed faster. Setting to 0 disables fuel consumption
-		#Range: > 0
-		"Hearth Fuel Consumption Interval" = 40
-
-	["Thermal Sources".Boiler]
-		#Allows the boiler to automatically turn on/off based on nearby players' temperature
-		#If false, it turns on/off by redstone signal instead
-		"Automatic Boiler" = false
-		#The distance the boiler's air will travel from a source, like the boiler itself or the end of a pipe
-		#Range: > 0
-		"Boiler Range" = 16
-		#The maximum distance that air can be piped away from the boiler
-		#Range: > 0
-		"Max Boiler Range" = 96
-		#The maximum volume of the boiler's area of effect
-		#Range: > 1
-		"Boiler Volume" = 2000
-		#The time it takes for the boiler to be fully functional after being placed
-		#Range: > 0
-		"Boiler Warm-Up Time" = 1200
-		#The maximum amount of insulation that the boiler can provide
-		#Range: 0 ~ 10
-		"Boiler Warmth Strength" = 5
-		#How often the boiler consumes fuel (in ticks)
-		#Lower numbers mean fuel is consumed faster. Setting to 0 disables fuel consumption
-		#Range: > 0
-		"Boiler Fuel Consumption Interval" = 40
-
-	["Thermal Sources".Icebox]
-		#Allows the icebox to automatically turn on/off based on nearby players' temperature
-		#If false, it turns on/off by redstone signal instead
-		"Automatic Icebox" = false
-		#The distance the icebox's air will travel from a source, like the icebox itself or the end of a pipe
-		#Range: > 0
-		"Icebox Range" = 16
-		#The maximum distance that air can be piped away from the icebox
-		#Range: > 0
-		"Max Icebox Range" = 96
-		#The maximum volume of the icebox's area of effect
-		#Range: > 1
-		"Icebox Volume" = 2000
-		#The time it takes for the icebox to be fully functional after being placed
-		#Range: > 0
-		"Icebox Warm-Up Time" = 1200
-		#The maximum amount of insulation that the icebox can provide
-		#Range: 0 ~ 10
-		"Icebox Chill Strength" = 5
-		#How often the icebox consumes fuel (in ticks)
-		#Lower numbers mean fuel is consumed faster. Setting to 0 disables fuel consumption
-		#Range: > 0
-		"Icebox Fuel Consumption Interval" = 40
 
 #Format: [season-start, season-mid, season-end, *units]
 #First 3 parameters: The temperature offset at the start, middle, and end of the season
